namespace TrenchAPI.Models
{
    public class SpulenTyp
    {
    }
}
